--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Bootstrap</title>
 </head>
 <body>
-    <div class="jumbotron text-center">
+    <div class="container">
+    <div class="jumbotron text-center bg-light">
+        <div class="container">
           <h1>Welcome to our Bootstrap 4 page!</h1>
           <h2>Look at this button! Wow, let's click on it!</h2>
-          <button type="button" class="btn btn-primary btn-block">Learn more</button>
+          <button type="button" class="btn col-12 btn-primary">Learn more</button>
+        </div>
     </div>
       <hr class="my-4"> 
       <p class="lead">Let's look at some random pictures!</p>
@@ -27,6 +30,7 @@
       <div class="alert alert-success text-center" role="alert">
         Thanks for visiting!
       </div>
+    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
